Fixed clipping of search box on ipad & removed generated *.css from repository

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -76,6 +76,7 @@ footer {
     }
     input#s {
         width: auto;
+        max-width: 90%;
         float: left;
     }
     #searchsubmit {
